<resources>
    <string name="text_hi_there">Hi there!</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_log_in">Log In</string>
    <string name="err_edit_empty">Should not be empty</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="button_register">Register</string>
    <string name="err_passwords_not_same">Passwords must be the same</string>
    <string name="err_passwords_dont_match">Passwords don\'t match</string>
    <string name="msg_invalid_cred">Invalid username/password</string>
    <string name="msg_username_exists">Username already exists</string>
    <string name="msg_no_internet">No internet connection</string>
    <string name="text_hey_there">Hey there!</string>
    <string name="text_hobbymatcher_desc">HobbyMatcher is a service to find something interesting to do with people around you</string>
    <string name="button_lets_go">Let\'s go</string>
    <string name="button_go_back">Go Back</string>
    <string name="desc_people_comm">Image with people communicating</string>
</resources>